# math-homework

./: .gitignore  LICENSE  README.md  formatter.py  generators.py  main.py  mathw.py  pyproject.toml  requirements.txt  test.py
mathw/: __init__.py  formatter.py  mathwork.py
mathw/se/: __init__.py  add.py  form.py  frac.py  func.py  mult.py  utils.py
mathw/series/: __init__.py  add.py  frac.py  mult.py  utils.py
series/: add.py  mult.py  utils.py
